Rewrite task 43